# Valley-Engine

./: .gitignore  CMakeLists.txt  README.md
apps/ValleyEngine/: main.cpp
assets/: test_albedo.png.fixture  test_scene.gltf
include/Valley/Assets/: AssetManager.h  AssetRegistry.h  AssetTypes.h
include/Valley/Core/: Application.h  EngineClock.h  Logger.h  Module.h  TimeStep.h
include/Valley/Platform/: Input.h  Window.h
include/Valley/Renderer/: Camera.h  IRendererBackend.h  Math.h  RenderDiagnostics.h  RenderGraph.h  RendererModule.h  Scene.h  SoftwareRasterBackend.h
include/Valley/Simulation/: SimulationModule.h  SimulationProfiler.h  SimulationScheduler.h
include/Valley/Terrain/: AsyncTerrainMesher.h  Biome.h  Noise.h  TerrainGenerator.h  TerrainStreamer.h  TerrainTypes.h
include/Valley/ToolsDebug/: DebugControls.h  DebugModule.h
include/Valley/World/: FloatingOrigin.h  WorldChunk.h  WorldCoordinates.h  WorldDebug.h  WorldModule.h  WorldRegistry.h  WorldStreamer.h
src/Assets/: AssetManager.cpp  AssetRegistry.cpp  AssetTypes.cpp
src/Core/: Application.cpp  EngineClock.cpp  Logger.cpp
src/Platform/: Input.cpp  Window.cpp  X11Window.cpp
src/Renderer/: Camera.cpp  RenderDiagnostics.cpp  RenderGraph.cpp  RendererModule.cpp  Scene.cpp  SoftwareRasterBackend.cpp
src/Simulation/: SimulationModule.cpp  SimulationProfiler.cpp  SimulationScheduler.cpp
src/Terrain/: AsyncTerrainMesher.cpp  Biome.cpp  Noise.cpp  TerrainGenerator.cpp  TerrainStreamer.cpp  TerrainTypes.cpp
src/ToolsDebug/: DebugControls.cpp  DebugModule.cpp
src/World/: FloatingOrigin.cpp  WorldChunk.cpp  WorldCoordinates.cpp  WorldDebug.cpp  WorldModule.cpp  WorldRegistry.cpp  WorldStreamer.cpp
tests/: AssetPipelineTests.cpp  EngineClockTests.cpp  InputTests.cpp  RendererArchitectureTests.cpp  SimulationFrameworkTests.cpp  TerrainFrameworkTests.cpp  WorldStreamingTests.cpp
